feat(BE-84): Swagger test for forgot password
